# regression

./: .gitattributes  .gitignore  .replit  .travis-update-gh-pages.sh  .travis.yml  LICENSE  MANIFEST.in  README.rst  config.py  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  regression.py  requirements.txt  run.py  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: ci.yml  docspublish.yml  pythonpackage.yml  release.yml
_static/: bizstyle.js  documentation_options.js
docs/source/: conf.py  index.rst  modules.rst
regression/: __init__.py  __main__.py  _version.py  processing.py
regression/static/: style.css
regression/templates/: index.html  process.html  result.html
src/regression/: __init__.py  __main__.py  _version.py  config.cfg  processing.py  views.py
src/regression/static/: style.css
src/regression/templates/: result.html
static/: style.css
templates/: index.html  process.html
tests/: test_regression.py  test_simple.py
