[metadata]
name = regression
description = Web app for regression analysis of provided data files
long_description = file: README.rst
url = https://github.com/makr3la/regression
author = Paweł Kowalski
author-email = makr3la@gmail.com
platforms = any
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
packages = find:
package_dir =
  =src
python_requires = >=3.6
install_requires =
    flask
    openpyxl>=2.5.7
    pandas
    statsmodels
    xlrd>=1.1
setup_requires =
    setuptools_scm
include_package_data = True
zip_safe = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    regression = regression.__main__:main

[options.extras_require]
test = tox

[coverage:run]
omit = */regression/__main__.py, */regression/_version.py

[tox:tox]
envlist = py36, py37, py38
minversion = 3.3.0
isolated_build = true
skip_missing_interpreters = true

[gh-actions]
python =
    3.6: py36
    3.7: py37
    3.8: py38

[testenv]
deps =
    pytest
    pytest-cov
commands =
    pytest {posargs:--cov=regression --cov-report term-missing}
